update visits
